--- a/_posts/2017_09_22-entry.markdown
+++ b/_posts/2017_09_22-entry.markdown
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: APT BOREDOM
+title: Title
 date: 2017-07-01 15:09:00
-description: What is dynamic memory?
+description: Description
+category:
+  - Category
 tags:
-  - c++
-  - low level programming
+  - Tag
 ---
 **Dynamic Memory** is the use of memory during runtime. It is dynamic in that the compiler is unable to ascertain the exact amount of memory its allocation will require. This differs from static allocation where its size is determined at compile time and its location in memory is the stack. When objects are dynamically allocated they use a special region of memory called the heap. Let's look at those differences. 
 
