--- a/_posts/2017_10_09-Dev_Blog.markdown
+++ b/_posts/2017_10_09-Dev_Blog.markdown
@@ -3,6 +3,7 @@ layout: post
 title: New Categories and Tags!
 date: 2017-10-10
 description: NEW! Development Blog!
+tags: Dev Blog
 ---
 <h1> New Categories! </h1>
 
